--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,18 +6,18 @@
 
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="apple-touch-img/logo-precomposed" href="logo.png">
-    <link rel="apple-touch-img/logo" href="logo.png">
-    <link rel="apple-touch-img/logo" sizes="72x72" href="logo.png">
-    <link rel="apple-touch-img/logo" sizes="114x114" href="logo.png">
+    <link rel="apple-touch-img/logo-precomposed" href="/logo.png">
+    <link rel="apple-touch-img/logo" href="/logo.png">
+    <link rel="apple-touch-img/logo" sizes="72x72" href="/logo.png">
+    <link rel="apple-touch-img/logo" sizes="114x114" href="/logo.png">
 
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <link href="img/logo.png" rel="shortcut icon">
+    <link href="/css/styles.css" rel="stylesheet" type="text/css">
+    <link href="logo.png" rel="shortcut icon">
 </head>
 <body>
   <div class="sidebar">
     <a href="/" class="logo">
-      <img src="logo.png">
+      <img src="/logo.png">
     </a>
 
     <ul class="nav">
