--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,10 +27,11 @@
         <li><a href="/about"><span class="icon info"></span>about</a></li>
         <li><a href="/projects"><span class="icon code"></span>projects</a></li>
         <li><a href="http://spamthe.net"><span class="icon link"></span>links</a></li>
-        <li><a href="http://github.com/tybenz"><span class="icon github"></span>github</a></li>
-        <li><a href="http://twitter.com/tybenz"><span class="icon twitter"></span>twitter</a></li>
-      </div>
       -->
+        <li><a href="http://tech-hack-maswag.blogspot.jp/"><span class="icon Blog"></span>Blog</a></li>
+        <li><a href="http://github.com/MasWag"><span class="icon github"></span>github</a></li>
+        <li><a href="http://twitter.com/MasWag"><span class="icon twitter"></span>twitter</a></li>
+      </div>
     </ul>
   </div>
   <div class="wrapper">
