言語別のリンクを作ってみた

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="{{ page.lang }}">
 <head>
     <meta charset="UTF-8">
     <title>{{ site.title }}</title>
@@ -31,6 +31,9 @@
         <li><a href="http://tech-hack-maswag.blogspot.jp/"><span class="icon Blog"></span>Blog</a></li>
         <li><a href="http://github.com/MasWag"><span class="icon github"></span>github</a></li>
         <li><a href="http://twitter.com/MasWag"><span class="icon twitter"></span>twitter</a></li>
+        <li><a href="http://twitter.com/MasWag"><span class="icon twitter"></span></a></li>
+        <li><a href="/"><span class="icon link"></span>English</a></li>
+        <li><a href="/ja"><span class="icon link"></span>日本語</a></li>
       </div>
     </ul>
   </div>
