大文字、小文字をそれっぽくした

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,8 +29,8 @@
         <li><a href="http://spamthe.net"><span class="icon link"></span>links</a></li>
       -->
         <li><a href="http://tech-hack-maswag.blogspot.jp/"><span class="icon Blog"></span>Blog</a></li>
-        <li><a href="http://github.com/MasWag"><span class="icon github"></span>github</a></li>
-        <li><a href="http://twitter.com/MasWag"><span class="icon twitter"></span>twitter</a></li>
+        <li><a href="http://github.com/MasWag"><span class="icon github"></span>GitHub</a></li>
+        <li><a href="http://twitter.com/MasWag"><span class="icon twitter"></span>Twitter</a></li>
         <li><a href="http://twitter.com/MasWag"><span class="icon twitter"></span></a></li>
         <li><a href="/"><span class="icon link"></span>English</a></li>
         <li><a href="/ja"><span class="icon link"></span>日本語</a></li>
