--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-img/logo" sizes="114x114" href="/logo.png">
 
     <link href="/css/styles.css" rel="stylesheet" type="text/css">
-    <link href="logo.png" rel="shortcut icon">
+    <link href="/logo.png" rel="shortcut icon">
 </head>
 <body>
   <div class="sidebar">
