modified uri of blog

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
         <li><a href="/projects"><span class="icon code"></span>projects</a></li>
         <li><a href="http://spamthe.net"><span class="icon link"></span>links</a></li>
       -->
-        <li><a href="http://tech-hack-maswag.blogspot.jp/"><span class="icon Blog"></span>Blog</a></li>
+        <li><a href="http://blog.masakiwa.ga"><span class="icon Blog"></span>Blog</a></li>
         <li><a href="http://github.com/MasWag"><span class="icon github"></span>GitHub</a></li>
         <li><a href="http://twitter.com/MasWag"><span class="icon twitter"></span>Twitter</a></li>
         <li><a href="http://twitter.com/MasWag"><span class="icon twitter"></span></a></li>
