updated link to my research page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
         <li><a href="http://tech-hack-maswag.blogspot.jp/"><span class="icon Blog"></span>Blog</a></li>
         <li><a href="http://github.com/MasWag"><span class="icon github"></span>GitHub</a></li>
         <li><a href="http://twitter.com/MasWag"><span class="icon twitter"></span>Twitter</a></li>
-        <li><a href="http://www-mmm.is.s.u-tokyo.ac.jp/~mwaga"><span class="icon link"></span>Research</a></li>
+        <li><a href="http://group-mmm.org/~mwaga/"><span class="icon link"></span>Research</a></li>
         <li><a href="/"><span class="icon link"></span>English</a></li>
         <li><a href="/ja"><span class="icon link"></span>日本語</a></li>
       </div>
