added google adsense

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
 
     <link href="/css/styles.css" rel="stylesheet" type="text/css">
     <link href="/logo.png" rel="shortcut icon">
+    <script data-ad-client="ca-pub-0381616672957148" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
   <div class="sidebar">
