--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,6 +14,7 @@
     <link href="../css/styles.css" rel="stylesheet" type="text/css">
     <link href="../css/pygments.css" rel="stylesheet" type="text/css">
     <link href="../img/logo.jpg" rel="shortcut icon">
+    <script data-ad-client="ca-pub-0381616672957148" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
   <div class="sidebar">
